--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  font-size: 66.5%;
 }
 
 header {
@@ -18,23 +19,65 @@ main {
 .item-add-and-display {
   flex: 0 0 60%;
   border: 1px solid red;
+  position: relative;
 }
 .item-add-and-display .list-items {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  position: absolute;
+  width: 60%;
+  top: 5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 1px solid blue;
 }
 .item-add-and-display .list-item {
   border: 1px solid red;
   border-radius: 3px;
   display: flex;
+  justify-content: space-between;
+  padding: 2% 3%;
+  align-items: center;
+  margin: 0.5rem 0.5rem;
 }
 .item-add-and-display .list-item li {
-  color: red;
+  width: 74%;
+  font-size: 1.2rem;
 }
+.item-add-and-display .list-item li input {
+  width: 100%;
+  font-size: 1.2rem;
+}
+.item-add-and-display .list-item__controls {
+  align-items: flex-end;
+}
+.item-add-and-display .add-item {
+  width: 60%;
+  position: absolute;
+  top: 3.5rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.item-add-and-display .add-item input {
+  display: inline-block;
+  width: 86.5%;
+}
+
 .select-day {
   flex: 0 0 40%;
   border: 1px solid red;
+  position: relative;
+  font-size: 1.6rem;
+}
+.select-day ul {
+  position: absolute;
+  top: 3.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
