--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,18 +1,40 @@
+html {
+    height: 100vh;
+}
+
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 100vh;
     font-size: 66.5%;
+    background-color: #E9ECEF;
 }
 
 header {
     flex: 0 0 20%;
+    width: 100%;
 }
 
 main {
     display: flex;
-    border: 1px solid green;
     justify-content: center;
     // align-items: center;
-    flex: 0 0 80%;
+    flex: 0 0 70%;
+    width: 60%;
+    background-color: #DEE2E6;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 2rem;
+
+    svg {
+        width: 1.2rem;
+        height: 1.2rem;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        transition: all .2s;
+        
+    }
 }
