--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -11,9 +11,26 @@ body {
     background-color: #E9ECEF;
 }
 
-header {
+.header {
     flex: 0 0 20%;
     width: 100%;
+    position: relative;
+
+    &__content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        &--main {
+            font-size: 3rem;
+            margin: 0;
+        }
+
+        &--subtext {
+            font-size: 1rem;
+        }
+    }
 }
 
 main {
