added item complete/incomplete feature

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -74,5 +74,10 @@ main {
             fill: green;
             cursor: pointer;
         }
+
+        .cross:hover {
+            fill: orange;
+            cursor: pointer;
+        }
     }
 }
