--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,5 +1,6 @@
 html {
     height: 100vh;
+    box-sizing: border-box;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
     align-items: center;
     height: 100vh;
     font-size: 66.5%;
-    background-color: #E9ECEF;
+    background-color: #131213;
 }
 
 .header {
@@ -39,9 +40,8 @@ main {
     // align-items: center;
     flex: 0 0 70%;
     width: 60%;
-    background-color: #DEE2E6;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 2rem;
+    border-radius: 1rem;
+    overflow: hidden;
 
     svg {
         width: 1.2rem;
