--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,83 +1,234 @@
-html {
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+html, body {
+    font-size: 10px;
     height: 100vh;
     box-sizing: border-box;
 }
 
 body {
+    width: 100%;
+    height: inherit;
+    background-color: #131213;
+    color: white;
+
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
-    font-size: 66.5%;
-    background-color: #131213;
+
+    border: 1px solid red;
 }
 
 .header {
-    flex: 0 0 20%;
+
     width: 100%;
-    position: relative;
+    text-align: center;
+    padding: 3%;
 
     &__content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-
         &--main {
-            font-size: 3rem;
-            margin: 0;
+            font-size: 6rem;
         }
 
         &--subtext {
-            font-size: 1rem;
+            font-size: 2rem;
         }
     }
 }
 
-main {
-    display: flex;
-    justify-content: center;
-    // align-items: center;
-    flex: 0 0 70%;
+.main {
     width: 60%;
+    height: 70vh;
+
+    border: 1px solid red;
     border-radius: 1rem;
+
+    display: flex;
+    align-items: stretch;
+
     overflow: hidden;
 
-    svg {
-        width: 1.2rem;
-        height: 1.2rem;
-        transition: all .2s;
+    &__navigation {
+        flex: 1.3 0 0;
+        padding: 3.5% 1% 2% 1%;
+        background-color: #1A1B1B;
+        border-right: 1px solid red;
+
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        &--item {
+            padding: 4% 7%;
+
+            border-radius: 2.5rem;
+
+            font-size: 1.7rem;
+
+            display: flex;
+            gap: 1.5rem;
+            align-items: center;
+
+            &.selected {
+                background-color: #2D2C2D;
+            }
+
+            &:hover {
+                cursor: pointer;
+            }
+
+            &__add-category {
+                margin-top: auto;
+                // align-self: center;
+
+                &__button {
+                    border: none;
+                    border-radius: 0.5rem;
+                    background-color: inherit;
+
+                    width: 1.7rem;
+                    height: 1.7rem;
+
+                    color: white;
+                    
+                    &:hover {
+                        cursor: pointer;
+                    }
+
+                }
+            }
+        }
+
     }
 
-    button {
+    &__list {
+        flex: 3 0 0;
+        padding: 2% 3%;
+        background-color: #2D2C2D;
 
-        border: none;
-        background-color: white;
-        // border-radius: 50%;
+        &--add-item {
+            margin-top: 1rem;
+            border: 1px solid red;
+            border-radius: 5.2rem;
+            padding: 0.8rem 0.8rem;
 
-        .check:hover{
-            fill: green;
-            cursor: pointer;
-        }
+            background-color: #1A1B1B;
 
-        .edit:hover {
-            fill: yellow;
-            cursor: pointer;
-        }
+            display: flex;
+            gap: 0.5rem;
 
-        .delete:hover {
-            fill:red;
-            cursor: pointer;
-        }
+            & > * {
+                border: none;
+                background-color: #2D2C2D;
+                border: 0.1rem solid #2D2C2D;
+            }
 
-        .submit:hover {
-            fill: green;
-            cursor: pointer;
-        }
+            &-input {
+                flex: 3 0 0;
+                padding: 0.7rem 1.7rem;
+                border-radius: 5rem;
+                font-size: 2.1rem;
+                outline: none;
 
-        .cross:hover {
-            fill: orange;
-            cursor: pointer;
+                &:focus {
+                    background-color: inherit;
+                    color: white;
+                }
+            }
+
+            &-button {
+                flex: 0.2 0 0;
+
+                border-radius: 50%;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: inherit;
+                    color: white;
+                }
+            }
         }
     }
+
+
 }
+
+// .header {
+//     // flex: 1 0 0;
+//     // width: 100%;
+//     // position: relative;
+
+//     // &__content {
+//     //     position: absolute;
+//     //     top: 50%;
+//     //     left: 50%;
+//     //     transform: translate(-50%, -50%);
+
+//     //     &--main {
+//     //         font-size: 3rem;
+//     //         margin: 0;
+//     //     }
+
+//     //     &--subtext {
+//     //         font-size: 1rem;
+//     //     }
+//     // }
+// }
+
+// main {
+//     display: flex;
+//     justify-content: center;
+//     // align-items: center;
+//     // flex: 3 0 0;
+//     width: 60%;
+//     border-radius: 1rem;
+//     // overflow: hidden;
+
+//     svg {
+//         width: 1.2rem;
+//         height: 1.2rem;
+//         transition: all .2s;
+//     }
+
+//     button {
+
+//         border: none;
+//         background-color: white;
+//         // border-radius: 50%;
+
+//         .check:hover{
+//             fill: green;
+//             cursor: pointer;
+//         }
+
+//         .edit:hover {
+//             fill: yellow;
+//             cursor: pointer;
+//         }
+
+//         .delete:hover {
+//             fill:red;
+//             cursor: pointer;
+//         }
+
+//         .submit:hover {
+//             fill: green;
+//             cursor: pointer;
+//         }
+
+//         .cross:hover {
+//             fill: orange;
+//             cursor: pointer;
+//         }
+//     }
+// }
