--- a/style.css
+++ b/style.css
@@ -44,11 +44,50 @@ body {
   align-items: stretch;
   overflow: hidden;
 }
+.main__list {
+  flex: 3 0 0;
+  padding: 2% 3%;
+  background-color: #2D2C2D;
+}
+.main__list--add-item {
+  margin-top: 1rem;
+  border: 1px solid red;
+  border-radius: 5.2rem;
+  padding: 0.8rem 0.8rem;
+  background-color: #1A1B1B;
+  display: flex;
+  gap: 0.5rem;
+}
+.main__list--add-item > * {
+  border: none;
+  background-color: #2D2C2D;
+  border: 0.1rem solid #2D2C2D;
+}
+.main__list--add-item-input {
+  flex: 3 0 0;
+}
+.main__list--add-item-button {
+  flex: 0.2 0 0;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main__list--add-item-button:hover {
+  cursor: pointer;
+  background-color: inherit;
+  color: white;
+}
+
 .main__navigation {
   flex: 1.3 0 0;
   padding: 3.5% 1% 2% 1%;
   background-color: #1A1B1B;
   border-right: 1px solid red;
+  display: flex;
+  flex-direction: column;
+}
+.main__navigation__list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -71,10 +110,14 @@ body {
 }
 .main__navigation--item__add-category {
   margin-top: auto;
+  position: relative;
+}
+.main__navigation--item__add-category:hover {
+  background-color: inherit;
 }
 .main__navigation--item__add-category__button {
   border: none;
-  border-radius: 2.5rem;
+  border-radius: 1rem;
   background-color: inherit;
   width: 3rem;
   height: 3rem;
@@ -86,49 +129,52 @@ body {
 }
 .main__navigation--item__add-category__button:hover {
   cursor: pointer;
-  background-color: #1A1B1B;
+  background-color: #2D2C2D;
+  transform: rotate(-45deg);
 }
-.main__list {
-  flex: 3 0 0;
-  padding: 2% 3%;
+.main__navigation--item__add-category--form {
+  width: 40rem;
+  height: 18rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-102%);
+  padding: 5% 4%;
+  border-radius: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  z-index: 100;
+  background-color: #131213;
+  opacity: 1;
+  transition: all 0.3s;
+}
+.main__navigation--item__add-category--form__hidden {
+  transform: translateY(-98%);
+  visibility: hidden;
+  opacity: 0;
+}
+.main__navigation--item__add-category--form::after {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 100%;
+  left: 2.6rem;
+  border-left: 1rem solid transparent;
+  border-right: 1rem solid transparent;
+  border-top: 1rem solid #131213;
+}
+.main__navigation--item__add-category--form__input {
+  border: 1px solid #2D2C2D;
   background-color: #2D2C2D;
 }
-.main__list--add-item {
-  margin-top: 1rem;
-  border: 1px solid red;
-  border-radius: 5.2rem;
-  padding: 0.8rem 0.8rem;
-  background-color: #1A1B1B;
-  display: flex;
-  gap: 0.5rem;
+.main__navigation--item__add-category--form__button {
+  padding: 2%;
+  border-radius: 2.5rem;
 }
-.main__list--add-item > * {
-  border: none;
-  background-color: #2D2C2D;
-  border: 0.1rem solid #2D2C2D;
-}
-.main__list--add-item-input {
-  flex: 3 0 0;
-  padding: 0.7rem 1.7rem;
-  border-radius: 5rem;
-  font-size: 2.1rem;
-  outline: none;
-}
-.main__list--add-item-input:focus {
-  background-color: inherit;
-  color: white;
-}
-.main__list--add-item-button {
-  flex: 0.2 0 0;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.main__list--add-item-button:hover {
+.main__navigation--item__add-category--form__button:hover {
   cursor: pointer;
-  background-color: inherit;
-  color: white;
 }
 
 .icon {
@@ -154,6 +200,44 @@ body {
 }
 .icon--plus {
   fill: white;
+}
+
+.input {
+  outline: none;
+  display: block;
+  color: gray;
+}
+.input:focus {
+  background-color: inherit;
+  color: white;
+}
+.input__large {
+  padding: 0.7rem 1.7rem;
+  border-radius: 5rem;
+  font-size: 2.1rem;
+}
+.input__small {
+  border-radius: 2rem;
+  width: 100%;
+  padding: 0.6rem 1.5rem;
+  font-size: 1.7rem;
+}
+
+.dropdown {
+  color: gray;
+  background-color: #2D2C2D;
+  border: 1px solid #2D2C2D;
+}
+.dropdown:focus {
+  background-color: inherit;
+  color: white;
+}
+.dropdown option {
+  text-align: start;
+}
+
+.hidden {
+  visibility: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
