--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -47,7 +47,8 @@
             position: relative;
 
             &:hover {
-                background-color: inherit;
+                cursor: pointer;
+                background-color: #1A1B1B;
             }
 
             &__button {
