--- a/style.css
+++ b/style.css
@@ -78,6 +78,25 @@ body {
   background-color: inherit;
   color: white;
 }
+.main__list--items__category {
+  margin-top: 2rem;
+  padding: 2% 3%;
+}
+.main__list--items__category--header {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  border-bottom: 1px solid white;
+  padding-bottom: 0.7rem;
+}
+.main__list--items__category--items {
+  list-style-type: none;
+  padding: 2% 0.9%;
+}
+.main__list--items__category--items__item {
+  display: flex;
+  gap: 1.35rem;
+}
 
 .main__navigation {
   flex: 1.3 0 0;
@@ -113,7 +132,8 @@ body {
   position: relative;
 }
 .main__navigation--item__add-category:hover {
-  background-color: inherit;
+  cursor: pointer;
+  background-color: #1A1B1B;
 }
 .main__navigation--item__add-category__button {
   border: none;
@@ -177,6 +197,14 @@ body {
   cursor: pointer;
 }
 
+h2 {
+  font-size: 2.2rem;
+}
+
+p {
+  font-size: 1.7rem;
+}
+
 .icon {
   background-color: inherit;
   border: none;
@@ -194,6 +222,9 @@ body {
 }
 .icon--heart {
   fill: red;
+}
+.icon--house {
+  fill: green;
 }
 .icon--star {
   fill: yellow;
