--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -67,10 +67,17 @@ body {
 
             background-color: #1A1B1B;
 
+            position: relative;
+
             display: flex;
             flex-direction: column;
             // flex-wrap: wrap;
-            gap: 0.5rem;
+            // gap: 0.5rem;
+
+            &__date {
+                background-color: black;
+                color: white;
+            }
 
             & > * {
                 border: none;
@@ -83,13 +90,29 @@ body {
                 background-color: #2D2C2D;
                 border: 0.1rem solid #2D2C2D;
                 // flex: 3 0 0;
+
+                &:focus, &:not(:placeholder-shown) {
+
+                    & + div {
+                        padding: 1% 1%;
+                        opacity: 1;
+                        opacity: 1;
+                        height: auto;
+                    }
+                }
             }
 
             &__controls {
                 display: flex;
                 gap: 2rem;
 
-                padding: 1% 1%;
+                padding: 0;
+
+                opacity: 0;
+                height: 0;
+                overflow: hidden;
+
+                transition: all 0.3s;
             }
 
             &-button {
