--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -58,6 +58,7 @@ body {
         flex: 3 0 0;
         padding: 2% 3%;
         background-color: #2D2C2D;
+        overflow: scroll;
 
         &--add-item {
             margin-top: 1rem;
@@ -107,9 +108,10 @@ body {
                 gap: 2rem;
 
                 padding: 0;
-
                 opacity: 0;
+
                 height: 0;
+
                 overflow: hidden;
 
                 transition: all 0.3s;
