--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
   flex: 3 0 0;
   padding: 2% 3%;
   background-color: #2D2C2D;
+  overflow: scroll;
 }
 .main__list--add-item {
   margin-top: 1rem;
